--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-FRONT_END_PORT=8080
-BACKEND_PORT=5000
+JWT_SECRET=mJ_T6D5tU0l3jJ!@
+REACT_APP_API_URI=localhost
+REACT_APP_API_PORT=5000
+ADMIN_USER=admin
+ADMIN_PASS=admin
